src/objects/Case__c.object
<CustomObject>
    <description>A way of grouping depositions in a specific legal matter.</description>
    <fields>
        <fullName>Billing_Notes__c</fullName>
        <label>Billing Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Records__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission – Records</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Cases (Commission – Records)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission – Reporting</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Cases (Commission – Reporting)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Commission profile is not active</errorMessage>
            <filterItems>
                <field>Commission__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Commission__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Case_Caption__c</fullName>
        <label>Case Caption</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>What is the liklihood of handling this matter. If we are working on it, the probability should  be 100%</description>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Notes__c</fullName>
        <label>Production Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Sheet</label>
        <referenceTo>Rate_Sheet__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporter_Instructions__c</fullName>
        <label>Reporter Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Date__c</fullName>
        <label>Trial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VIP_Level__c</fullName>
        <label>VIP Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP 1</fullName>
                </value>
                <value>
                    <fullName>VIP 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Notes__c</fullName>
        <label>Video Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Default_Case_Caption__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Cases</fullName>
        <columns>NAME</columns>
        <columns>Billing_Notes__c</columns>
        <columns>Description__c</columns>
        <columns>Probability__c</columns>
        <columns>VIP_Level__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>New Cases</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>